[tool.poetry]
name = "work-money"
version = "0.1.0"
description = "Calculation of piecework"
authors = ["Sergey Zaprudnov <szaprudnov@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2"
environs = "^15.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
